--- a/Cast_Director_Gernes_Content_Base_Recommender.ipynb
+++ b/Cast_Director_Gernes_Content_Base_Recommender.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,11 +92,11 @@
     "        \n",
     "        # Get the scores of the 10 most similar movies\n",
     "        #(element number 0 is the movie it self)\n",
-    "        sim_scores = sim_scores[1:11]\n",
+    "        sim_scores = sim_scores[1:k]\n",
     "        \n",
     "        # k0 is index of movie in dataset\n",
-    "        movie_indices = [k[0] for k in sim_scores]\n",
-    "        result[i,title] = movie_indices[:k]\n",
+    "        movie_indices = [j[0] for j in sim_scores]\n",
+    "        result[i,title] = movie_indices\n",
     "        \n",
     "        return result"
    ]
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,29 +150,6 @@
     "        result[i,title] = out[1:k]\n",
     "        \n",
     "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(6981,\n",
-       "  'The Dark Knight'): array([8031, 6218, 6623, 2085, 7648, 4145, 3381, 8613, 7659, 1134])}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = get_recommendations_ver2('The Dark Knight',11)\n",
-    "\n",
-    "result"
    ]
   },
   {
