--- a/Recommender System.ipynb
+++ b/Recommender System.ipynb
@@ -37,7 +37,7 @@
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
     "from nltk.corpus import wordnet\n",
     "from surprise.model_selection import cross_validate\n",
-    "\n",
+    "from surprise import Reader, SVD, Dataset\n",
     "\n",
     "\n",
     "import warnings; warnings.simplefilter('ignore')"
@@ -3053,127 +3053,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>poster_path</th>\n",
-       "      <th>title</th>\n",
-       "      <th>year</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>genres</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8031</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//dEYnvnUfXrqvqeRSqvIEtmzhoA8.jpg' style='height:100px;'></td>\n",
-       "      <td>The Dark Knight Rises</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>9263.0</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>['Action', 'Crime', 'Drama', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6218</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//dr6x4GyyegBWtinPBzipY02J2lV.jpg' style='height:100px;'></td>\n",
-       "      <td>Batman Begins</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>7511.0</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>['Action', 'Crime', 'Drama']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6623</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//5MXyQfz8xUP3dIFPTubhTsbFY6N.jpg' style='height:100px;'></td>\n",
-       "      <td>The Prestige</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>4510.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>['Drama', 'Mystery', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2085</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//uoWnnSlUIWjqUXxfIej3ucAxg7J.jpg' style='height:100px;'></td>\n",
-       "      <td>Following</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>363.0</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>['Crime', 'Drama', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7648</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//qmDpIHrmpJINaRKAfWQfftjCdyi.jpg' style='height:100px;'></td>\n",
-       "      <td>Inception</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>14075.0</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>['Action', 'Thriller', 'Science Fiction', 'Mystery', 'Adventure']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4145</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//zb0D3vfjcPFvuyHp1mFPOIcYJWH.jpg' style='height:100px;'></td>\n",
-       "      <td>Insomnia</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>1181.0</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>['Crime', 'Mystery', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3381</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//fQMSaP88cf1nz4qwuNEEFtazuDM.jpg' style='height:100px;'></td>\n",
-       "      <td>Memento</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>4168.0</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>['Mystery', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8613</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//nBNZadXqJSdt05SHLqgT0HuC5Gm.jpg' style='height:100px;'></td>\n",
-       "      <td>Interstellar</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>11187.0</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>['Adventure', 'Drama', 'Science Fiction']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7659</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//78kjgspmLLOm2Glgpzqo9cS4GpI.jpg' style='height:100px;'></td>\n",
-       "      <td>Batman: Under the Red Hood</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>459.0</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>['Action', 'Animation']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1134</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//jX5THE1yW3zTdeD9dupcIyQvKiG.jpg' style='height:100px;'></td>\n",
-       "      <td>Batman Returns</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>1706.0</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>['Action', 'Fantasy']</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipynb.fs.full.Cast_Director_Gernes_Content_Base_Recommender import  get_recommendations\n",
     "result = get_recommendations(\"The Dark Knight\",11)\n",
@@ -3191,7 +3073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3200,129 +3082,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>poster_path</th>\n",
-       "      <th>title</th>\n",
-       "      <th>year</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>genres</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8031</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//dEYnvnUfXrqvqeRSqvIEtmzhoA8.jpg' style='height:100px;'></td>\n",
-       "      <td>The Dark Knight Rises</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>9263.0</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>['Action', 'Crime', 'Drama', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6218</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//dr6x4GyyegBWtinPBzipY02J2lV.jpg' style='height:100px;'></td>\n",
-       "      <td>Batman Begins</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>7511.0</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>['Action', 'Crime', 'Drama']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6623</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//5MXyQfz8xUP3dIFPTubhTsbFY6N.jpg' style='height:100px;'></td>\n",
-       "      <td>The Prestige</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>4510.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>['Drama', 'Mystery', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2085</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//uoWnnSlUIWjqUXxfIej3ucAxg7J.jpg' style='height:100px;'></td>\n",
-       "      <td>Following</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>363.0</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>['Crime', 'Drama', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7648</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//qmDpIHrmpJINaRKAfWQfftjCdyi.jpg' style='height:100px;'></td>\n",
-       "      <td>Inception</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>14075.0</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>['Action', 'Thriller', 'Science Fiction', 'Mystery', 'Adventure']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4145</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//zb0D3vfjcPFvuyHp1mFPOIcYJWH.jpg' style='height:100px;'></td>\n",
-       "      <td>Insomnia</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>1181.0</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>['Crime', 'Mystery', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3381</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//fQMSaP88cf1nz4qwuNEEFtazuDM.jpg' style='height:100px;'></td>\n",
-       "      <td>Memento</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>4168.0</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>['Mystery', 'Thriller']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8613</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//nBNZadXqJSdt05SHLqgT0HuC5Gm.jpg' style='height:100px;'></td>\n",
-       "      <td>Interstellar</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>11187.0</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>['Adventure', 'Drama', 'Science Fiction']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7659</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//78kjgspmLLOm2Glgpzqo9cS4GpI.jpg' style='height:100px;'></td>\n",
-       "      <td>Batman: Under the Red Hood</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>459.0</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>['Action', 'Animation']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1134</th>\n",
-       "      <td><img src='http://image.tmdb.org/t/p/w185//jX5THE1yW3zTdeD9dupcIyQvKiG.jpg' style='height:100px;'></td>\n",
-       "      <td>Batman Returns</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>1706.0</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>['Action', 'Fantasy']</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = get_recommendations_ver2(\"The Dark Knight\",11)\n",
     "for i in result:\n",
@@ -3335,298 +3099,6 @@
    "metadata": {},
    "source": [
     "## Collaborative Filtering "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>userId</th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>1260759144</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1029</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1260759179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1061</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1260759182</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1129</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1260759185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1172</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1260759205</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   userId  movieId  rating   timestamp\n",
-       "0       1       31     2.5  1260759144\n",
-       "1       1     1029     3.0  1260759179\n",
-       "2       1     1061     3.0  1260759182\n",
-       "3       1     1129     2.0  1260759185\n",
-       "4       1     1172     4.0  1260759205"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratings = pd.read_csv('../the-movies-dataset/ratings_small.csv')\n",
-    "ratings.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100004, 4)"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratings.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>userId</th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>141</td>\n",
-       "      <td>3</td>\n",
-       "      <td>27369</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1298862555</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>142</td>\n",
-       "      <td>3</td>\n",
-       "      <td>44191</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1298932740</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>143</td>\n",
-       "      <td>3</td>\n",
-       "      <td>48783</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1298862361</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>144</td>\n",
-       "      <td>3</td>\n",
-       "      <td>50068</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1298862467</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>145</td>\n",
-       "      <td>3</td>\n",
-       "      <td>58559</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1298922071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>99254</td>\n",
-       "      <td>664</td>\n",
-       "      <td>116797</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1441100539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>99255</td>\n",
-       "      <td>664</td>\n",
-       "      <td>122882</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1441911719</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>99256</td>\n",
-       "      <td>664</td>\n",
-       "      <td>122892</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1441100672</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>99257</td>\n",
-       "      <td>664</td>\n",
-       "      <td>122900</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1441100833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>99258</td>\n",
-       "      <td>664</td>\n",
-       "      <td>134170</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1441101221</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>15265 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       userId  movieId  rating   timestamp\n",
-       "141         3    27369     3.5  1298862555\n",
-       "142         3    44191     3.5  1298932740\n",
-       "143         3    48783     4.5  1298862361\n",
-       "144         3    50068     4.5  1298862467\n",
-       "145         3    58559     3.0  1298922071\n",
-       "...       ...      ...     ...         ...\n",
-       "99254     664   116797     4.0  1441100539\n",
-       "99255     664   122882     4.0  1441911719\n",
-       "99256     664   122892     5.0  1441100672\n",
-       "99257     664   122900     4.5  1441100833\n",
-       "99258     664   134170     4.5  1441101221\n",
-       "\n",
-       "[15265 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratings[ratings['movieId'] >= 10000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Reader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-72-41fa4d8c5244>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0malgo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSVD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Reader' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "reader = Reader()\n",
-    "algo = SVD()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = Dataset.load_from_df(ratings[['userId', 'movieId', 'rating']], reader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=5, verbose=True)"
    ]
   },
   {
