--- a/User_Vector_With_Tf_Idf.ipynb
+++ b/User_Vector_With_Tf_Idf.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1009,7 +1009,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        ,  0.09019689,  0.08306969, ..., -0.01716697,\n",
+       "         0.19261998,  0.17114731],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "        -0.04934341,  0.52644005],\n",
+       "       [ 0.        ,  0.        ,  0.20942886, ..., -0.16861963,\n",
+       "         0.28593554,  0.49262477],\n",
+       "       ...,\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1050,7 @@
        "(9025, 671)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1071,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,30 +1082,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 0\n",
+    "n = 1\n",
     "ids, scores = get_items_rated_by_user(ratings_test, n)\n",
     "result = Yhat[ids, n]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ratings prediction of user  0  :\n",
-      "movie index :  30  -  predict ratings :  2.3963321085753417  -  true ratings :  2.5\n",
-      "movie index :  1739  -  predict ratings :  2.380644073761995  -  true ratings :  2.0\n",
-      "movie index :  1661  -  predict ratings :  2.3548161801973673  -  true ratings :  4.0\n",
-      "movie index :  927  -  predict ratings :  2.422421080971224  -  true ratings :  4.0\n",
-      "movie index :  903  -  predict ratings :  2.3768305738061084  -  true ratings :  2.0\n"
+      "ratings prediction of user  1  :\n",
+      "movie index :  328  -  predict ratings :  3.4794440959173984  -  true ratings :  3.0\n",
+      "movie index :  427  -  predict ratings :  3.415507515239639  -  true ratings :  4.0\n",
+      "movie index :  472  -  predict ratings :  3.4523731867196727  -  true ratings :  4.0\n",
+      "movie index :  129  -  predict ratings :  3.4168030869414494  -  true ratings :  5.0\n",
+      "movie index :  346  -  predict ratings :  3.49665950923465  -  true ratings :  3.0\n",
+      "movie index :  322  -  predict ratings :  3.1132406473233982  -  true ratings :  3.0\n",
+      "movie index :  37  -  predict ratings :  3.3406253856274404  -  true ratings :  5.0\n",
+      "movie index :  361  -  predict ratings :  3.297394428092352  -  true ratings :  3.0\n",
+      "movie index :  280  -  predict ratings :  3.426212961355537  -  true ratings :  4.0\n",
+      "movie index :  238  -  predict ratings :  3.4235586649700553  -  true ratings :  5.0\n",
+      "movie index :  198  -  predict ratings :  3.416974835514888  -  true ratings :  3.0\n",
+      "movie index :  432  -  predict ratings :  3.5397696834540695  -  true ratings :  3.0\n",
+      "movie index :  521  -  predict ratings :  3.4809862549327684  -  true ratings :  3.0\n",
+      "movie index :  132  -  predict ratings :  3.7127567951113254  -  true ratings :  4.0\n",
+      "movie index :  140  -  predict ratings :  3.4065237222120333  -  true ratings :  3.0\n",
+      "movie index :  321  -  predict ratings :  3.3958288025010805  -  true ratings :  3.0\n",
+      "movie index :  518  -  predict ratings :  3.4242153529032087  -  true ratings :  5.0\n",
+      "movie index :  335  -  predict ratings :  3.39710934008593  -  true ratings :  3.0\n",
+      "movie index :  406  -  predict ratings :  3.4033706857330976  -  true ratings :  3.0\n"
      ]
     }
    ],
@@ -1085,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1331,7 @@
        "[19962 rows x 6 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1541,7 @@
        "[19962 rows x 7 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1561,7 @@
        "3.8496002838124688"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
